--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -57,7 +57,7 @@
 
     li {
       display: inline-block;
-      font-family: 'akzidenz-medium';
+      font-family: 'AvenirNextMedium', 'AvenirNextLight';
       color: #444;
       font-size: 1.1em;
       border: 0;
@@ -183,7 +183,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: 'akzidenz';
+      font-family: 'AvenirNextLight';
       font-size: 1.1em;
     }
 
