--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -211,7 +211,7 @@
 
           h5 {
             font-size: 1em;
-            font-family: 'akzidenz';
+            font-family: 'AvenirNextLight';
             color: #3c3d46;
             line-height: 1.2;
             font-weight: 100;
@@ -333,7 +333,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'akzidenz';
+                font-family: 'AvenirNextLight';
                 margin-right: 5px;
               }
 
