--- a/src/less/post.less
+++ b/src/less/post.less
@@ -554,7 +554,7 @@
 		}
 
 		a {
-			font-family: 'akzidenz-regular';
+			font-family: 'AvenirNextMedium', 'AvenirNextLight';
 		}
 
 		blockquote {
@@ -850,7 +850,7 @@
 	.author {
 		font-size: 1.5em;
 		margin-bottom: 5px;
-		font-family: 'akzidenz-regular';
+		font-family: 'AvenirNextMedium', 'AvenirNextLight';
 		@media(max-width: 600px) {
 			font-size: 1.3em;
 		}
