--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -122,14 +122,14 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'akzidenz-regular';
+			font-family: 'AvenirNextMedium', 'AvenirNextLight';
 		}
 
 		.meta-item {
 			display: flex;
 			justify-items: center;
 			margin: auto 0;
-			font-family: 'akzidenz-regular';
+			font-family: 'AvenirNextMedium', 'AvenirNextLight';
 			align-items: center;
 			font-size: 16px;
 
@@ -143,19 +143,19 @@
 			}
 
 			@media(max-width: 600px){
-				font-family: 'akzidenz';
+				font-family: 'AvenirNextLight';
 			}
 
 			&.author {
 				span {
-					font-family: 'akzidenz-regular' !important;
+					font-family: 'AvenirNextMedium', 'AvenirNextLight' !important;
 					color: #627d90;
 				}
 			}
 
 			&.date {
 				span {
-					font-family: 'akzidenz' !important;
+					font-family: 'AvenirNextLight' !important;
 					color: #8e8e8e !important;
 				}
 				i {
@@ -262,7 +262,7 @@
 
 		a {
 			line-height: 1.5;
-			font-family: 'akzidenz-regular';
+			font-family: 'AvenirNextMedium', 'AvenirNextLight';
 		}
 	}
 
