--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -182,7 +182,7 @@
 			line-height: 1;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'akzidenz-regular', sans-serif;
+			font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
 			font-weight: 100;
 
 			&:hover {
@@ -212,7 +212,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'akzidenz-regular', sans-serif;
+			font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
@@ -299,7 +299,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'akzidenz-regular', sans-serif;
+				font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
