--- a/default.hbs
+++ b/default.hbs
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	{{! Styles }}
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
+	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/MyFontsWebfontsKit.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
 	<!-- perhaps use this <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
