--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -308,7 +308,7 @@
         position: absolute;
         bottom: 0;
         color: #162c52;
-        font-family: 'AvenirNextMedium', 'AvenirNextLight';
+        font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
         width: 100%;
       }
 
