--- a/src/less/post.less
+++ b/src/less/post.less
@@ -268,8 +268,8 @@
 
 		p {
 			line-height: 1.5 !important;
-			font-family: akzidenz;
-			color: #494b56;
+			font-family: AvenirNextLTPro-Light;
+			color: #1a6948;
 			font-size: 1em;
 			width: auto;
 			margin: 0;
@@ -554,7 +554,7 @@
 		}
 
 		a {
-			font-family: 'AvenirNextMedium', 'AvenirNextLight';
+			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
 		}
 
 		blockquote {
@@ -850,7 +850,7 @@
 	.author {
 		font-size: 1.5em;
 		margin-bottom: 5px;
-		font-family: 'AvenirNextMedium', 'AvenirNextLight';
+		font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
 		@media(max-width: 600px) {
 			font-size: 1.3em;
 		}
