--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -9,6 +9,7 @@
   background: @theme-color;
   z-index: 100;
   box-shadow: 0 0 5pc #083880;
+  border-bottom: 1px solid #2098bd;
 
   @media(max-width: 800px) {
     margin: auto;
