--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -42,6 +42,16 @@ font-style : normal;
              url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.svg?v=5.1.1#fontawesomeregular") format("svg");
 }
 
+/* @import must be at top of file, otherwise CSS will not work */
+@import url("//hello.myfonts.net/count/37415b");
+
+
+@font-face {font-family: 'AvenirNextLTPro-Light';src: url('../fonts/37415B_0_0.eot');src: url('../fonts/37415B_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/37415B_0_0.woff2') format('woff2'),url('../fonts/37415B_0_0.woff') format('woff'),url('../fonts/37415B_0_0.ttf') format('truetype');}
+
+
+@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('../fonts/37415B_1_0.eot');src: url('../fonts/37415B_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/37415B_1_0.woff2') format('woff2'),url('../fonts/37415B_1_0.woff') format('woff'),url('../fonts/37415B_1_0.ttf') format('truetype');}
+
+
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
