--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -110,6 +110,10 @@
 						opacity:0.1;
 					}
 				}
+
+				&:focus{
+					background: white;
+				}
 			}
 
 			.gh-subscribe-rss {
@@ -182,7 +186,7 @@
 			line-height: 1;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
+			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
 
 			&:hover {
@@ -212,7 +216,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
+			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
@@ -299,7 +303,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
+				font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
@@ -341,7 +345,6 @@
 			padding: 15px 5%;
 			width: 90%;
 			font-size: 14px;
-			/*color: #ebebeb;*/
 		}
 
 		.form-group,
