--- a/src/less/author.less
+++ b/src/less/author.less
@@ -39,7 +39,7 @@
 
 					.name {
 						font-size: 1.4em;
-						font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
+						font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 					}
 
 					.country,
@@ -273,7 +273,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'AvenirNextMedium', 'AvenirNextLight', sans-serif;
+			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 		}
 
 		i {
