--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'AvenirNextLight', sans-serif;
+	font-family: 'AvenirNextLTPro-Light', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -30,7 +30,7 @@ article {
 }
 
 strong {
-	font-family: 'AvenirNextMedium', 'AvenirNextLight';
+	font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
 }
 
 .row {
