--- a/src/less/code.less
+++ b/src/less/code.less
@@ -41,7 +41,7 @@ code {
   display: block;
   overflow-y: scroll !important;
   overflow-x: hidden !important;
-  padding: 0.8em;
+  padding: 1em 1.5em;
   color: #166c8b;
   background: #f1f5f8 !important;
   overflow-wrap: break-word;
@@ -49,6 +49,7 @@ code {
   font-size: 14px;
   white-space: pre-wrap !important;
   max-height: 500px;
+  border-left: 5px solid #ccd4da;
 
   * {
     font-size: 13px;
@@ -67,7 +68,6 @@ code {
   background: #f1f5f8;
   font-size: 13px;
   color: #2e9eb7;
-  border-radius: 4px;
   margin: 0 5px;
 }
 
