--- a/src/less/global.less
+++ b/src/less/global.less
@@ -51,7 +51,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'mr-eaves-xl-modern', serif;
+	font-family: 'AvenirNextLTPro-Medium', serif;
 	font-weight: 700;
 	color: @text-color-heading;
 }
@@ -65,7 +65,7 @@ h1 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'mr-eaves-xl-modern';
+	font-family: 'AvenirNextLTPro-Medium';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -95,7 +95,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'mr-eaves-xl-modern', serif;
+	font-family: 'AvenirNextLTPro-Medium', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
