--- a/src/less/post.less
+++ b/src/less/post.less
@@ -65,6 +65,8 @@
 		font-size: 1.5em;
 		margin-top: 10px;
 		margin-bottom: 0;
+		line-height: 1.2;
+		
 		@media(max-width: 800px) {
 			margin: 10px auto 0;
 			font-size: 1.4em;
@@ -89,10 +91,10 @@
 	}
 
 	h3 {
-		font-size: 1.7em;
+		font-size: 1.5em;
 		line-height: 1.2;
 		color: @text-post-header;
-		font-weight: 100;
+		font-weight: 600;
 		margin-bottom: 10px;
 	}
 
@@ -201,7 +203,7 @@
 			}
 
 			&.date{
-				font-size: 1em;
+				font-size: 1.3em;
 			}
 
 			a {
