--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -49,7 +49,7 @@
 		.post-excerpt {
 			margin: 10px auto 0;
 			line-height: 1;
-			font-weight: 600;
+			font-weight: 100;
 			text-align: left;
 			@media(max-width: 800px) {
 				font-weight: 500;
@@ -107,7 +107,7 @@
 
 	i {
 		margin-right: 10px;
-		font-size: 20px;
+		font-size: 15px;
 	}
 
 	p {
@@ -131,10 +131,11 @@
 			margin: auto 0;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
 			align-items: center;
-			font-size: 16px;
+			font-size: 14px;
+			padding:12px;
 
 			i {
-				height: 23px;
+				height: 15px;
     		display: inline-block;
 			}
 
@@ -150,16 +151,20 @@
 				span {
 					font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light' !important;
 					color: #627d90;
+					font-size: 16px;
 				}
 			}
 
 			&.date {
 				span {
-					font-family: 'AvenirNextLTPro-Light' !important;
+					font-family: 'AvenirNextLTPro-Medium' !important;
 					color: #8e8e8e !important;
+					font-size:16px;
 				}
 				i {
 					color: #8e8e8e !important;
+					height:20px;
+					font-size:16px;
 				}
 			}
 
@@ -208,7 +213,9 @@
 			font-size: 16px;
 			font-weight: 100;
 			text-transform: uppercase;
-			padding: 8px 20px;
+			padding: 14px 20px;
+	    line-height: 1;
+	    height: 14px;
 			@media(max-width: 600px) {
 				padding: 8px 18px;
 			}
