--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -1,26 +1,40 @@
 @import "variables.less";
 @import "mixin.less";
+.meta-item {
+  display: flex;
+  justify-items: center;
+  margin: auto 0;
+  align-items: center;
+  font-size: 14px;
+  padding: 12px;
 
+  span {
+    font-family: AvenirNextLTPro-Light;
+  }
+}
 .meta,
 .post-meta {
   .nodejs {
-    color: #83cc00;
+    color: #69a202;
+    background-color: lighten(#83cc00, 55%);
 
     i {
-      color: #83cc00 !important;
+      color: #69a202 !important;
     }
   }
 
   .aws {
-    color: #e9903a;
+    color: #c37a32;
+    background-color: lighten(#e9903a, 40%);
 
     i {
-      color: #e9903a !important;
+      color: #c37a32 !important;
     }
   }
 
   .django {
     color: #43b78b;
+    background-color: lighten(#43b78b, 50%);
 
     i {
       color: #43b78b !important;
@@ -28,15 +42,17 @@
   }
 
   .nosql {
-    color: #7bc553;
+    color: #6eb14a;
+    background-color: lighten(#6eb14a, 45%);
 
     i {
-      color: #7bc553 !important;
+      color: #6eb14a !important;
     }
   }
 
   .mysql {
     color: #7277F4;
+    background-color: lighten(#7277F4, 45%);
 
     i {
       color: #7277F4 !important;
@@ -44,23 +60,26 @@
   }
 
   .apis {
-    color: #7934b9;
+    color: #763EA9;
+    background-color: lighten(#763EA9, 45%);
 
     i {
-      color: #7934b9 !important;
+      color: #763EA9 !important;
     }
   }
 
   .frontend {
-    color: #e8bf29;
+    color: #b59316;
+    background-color: lighten(#b59316, 55%);
 
     i {
-      color: #e8bf29 !important;
+      color: #b59316 !important;
     }
   }
 
   .data {
     color: #1cccae;
+    background-color: lighten(#1cccae, 50%);
 
     i {
       color: #1cccae !important;
@@ -69,6 +88,7 @@
 
   .roundup {
     color: #666fa5;
+    background-color: lighten(#666fa5, 40%);
 
     i {
       color: #666fa5 !important;
@@ -77,6 +97,7 @@
 
   .excel {
     color: #136713;
+    background-color: lighten(#136713, 70%);
 
     i {
       color: #136713 !important;
@@ -85,6 +106,7 @@
 
   .devops {
     color: #495f6d;
+    background-color: lighten(#495f6d, 60%);
 
     i {
       color: #495f6d !important;
@@ -93,6 +115,7 @@
 
   .pandas {
     color: #c03694;
+    background-color: lighten(#c03694, 50%);
 
     i {
       color: #c03694 !important;
@@ -101,17 +124,19 @@
 
   .googlecloud {
     color: #1990f5;
+    background-color: lighten(#1990f5, 60%);
 
     i {
       color: #1990f5 !important;
     }
   }
 
-  .sql {
-    color: #474663;
+  .mysql {
+    color: #7a588e;
+    background-color: lighten(#7a588e, 50%);
 
     i {
-      color: #474663 !important;
+      color: #7a588e !important;
     }
   }
 
@@ -119,6 +144,7 @@
 
   .datascience {
     color: #118e84;
+    background-color: lighten(#118e84, 65%);
 
     i {
       color: #118e84 !important;
@@ -126,23 +152,26 @@
   }
 
   .tableau {
-    color: #da910b;
+    color: #af7409;
+    background-color: #fff8ec;
 
     i {
-      color: #da910b;
+      color: #af7409;
     }
   }
 
   .python {
-    color: #06bdea;
+    color: #0A9CC5;
+    background-color: lighten(#0A9CC5, 55%);
 
     i {
-      color: #06bdea;
+      color: #0A9CC5;
     }
   }
 
   .flask {
     color: #505da9;
+    background-color: lighten(#474663, 60%);
 
     i {
       color: #505da9;
@@ -151,9 +180,19 @@
 
   .statistics {
     color: #34b27a;
+    background-color: lighten(#34b27a, 50%);
 
     i {
       color: #34b27a;
+    }
+  }
+
+  .expressjs {
+    color: grey;
+    background-color: lighten(grey, 40%);
+
+    i {
+      color: grey;
     }
   }
 }
