--- a/src/less/post.less
+++ b/src/less/post.less
@@ -135,6 +135,8 @@
 		font-size: 12px;
 		display: flex;
 		width: auto;
+		align-items: center;
+
 		@media(max-width: 800px) {
 			max-width: 450px;
 			margin: 0 auto !important;
@@ -152,6 +154,11 @@
 			border-top: 1px solid #e8e8e8;
 			padding-top: 10px;
 			padding-bottom: 10px;
+		}
+
+		.tags {
+			 padding: 5px 14px;
+			 height: 30px;
 		}
 
 		&.date {
@@ -187,6 +194,8 @@
 			display: flex;
 			align-items: center;
 			text-transform: capitalize;
+			line-height: 1;
+
 			@media(max-width: 600px) {
 				margin: 0;
 				font-size: 1.2em;
@@ -199,7 +208,7 @@
 
 			i {
 				margin-right: 10px;
-				font-size: 1.5em;
+				font-size: 1em;
 			}
 
 			&.date{
