--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -7,7 +7,7 @@
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto;
-  background-color: #ffffff;
+  background: #fafafa;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
