--- a/src/less/post.less
+++ b/src/less/post.less
@@ -213,6 +213,10 @@
 
 			&.date{
 				font-size: 1.3em;
+
+				i {
+					font-size: 1.2em;
+				}
 			}
 
 			a {
@@ -238,7 +242,7 @@
 		border-top: 0;
 		padding: 10px 20px;
 		background: #e6f1ec;
-		border-left: 5px solid #26ae60;
+		border-left: 5px solid #9de2bb;
 		margin: 30px 80px;
 		width: auto;
 		display: flex;
@@ -253,8 +257,6 @@
 			border-bottom: 0;
 			border-top: 0;
 			padding: 15px 20px;
-			background: #f1f4f7;
-			border-left: 5px solid #26ae60;
 			margin: 15px 30px 30px;
 			width: auto;
 		}
@@ -286,9 +288,9 @@
 			margin: 0;
 			text-align: justify;
 			@media (max-width: 800px) {
-				font-size: 1em;
-				text-align: justify;
-				line-height: 1.4 !important;
+				font-size: .9em;
+		    text-align: justify;
+		    line-height: 1.3!important;
 			}
 			@media (max-width: 600px) {
 				font-size: 0.9em;
