--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -29,8 +29,8 @@
 		}
 
 		.post-title {
-			font-size: 2.5em;
-			line-height: .9;
+			font-size: 2.3em;
+			line-height: 1.1;
 			margin: 0;
 			@media(max-width: 600px) {
 				font-size: 1.7em !important;
@@ -48,12 +48,12 @@
 
 		.post-excerpt {
 			margin: 10px auto 0;
-			line-height: 1;
+			line-height: 1.2;
 			font-weight: 100;
 			text-align: left;
 			@media(max-width: 800px) {
 				font-weight: 500;
-				font-size: 1.4em;
+				font-size: 1.2em;
 			}
 		}
 	}
@@ -145,6 +145,7 @@
 
 			@media(max-width: 600px){
 				font-family: 'AvenirNextLTPro-Light';
+				padding:0;
 			}
 
 			&.author {
@@ -208,6 +209,7 @@
 		display: flex;
 		justify-content: space-between;
 		padding: 0 0 10px;
+		align-items: center;
 
 		.btn {
 			font-size: 16px;
@@ -217,7 +219,7 @@
 	    line-height: 1;
 	    height: 14px;
 			@media(max-width: 600px) {
-				padding: 8px 18px;
+				padding: 15px 18px;
 			}
 		}
 	}
