mobile style tweaks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -157,21 +157,26 @@
 		}
 
 		.tags {
-			 padding: 5px 14px;
+			 padding: 5px 10px;
 			 height: 30px;
 
 			 @media(max-width: 600px){
-				 font-size: 1.1em;
+				 font-size: .9em;
 				 height: 24px;
+
+				 i {
+					 font-size: .9em;
+				 }
 			 }
 		}
 
-		&.date {
+		.date {
+			padding:0;
 			span {
 				color: #8e8e8e !important;
 
 				@media(max-width: 600px){
-					font-size: 1.1em;
+					font-size: .8em;
 				}
 			}
 
