mobile style tweaks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -656,7 +656,7 @@
 
 	figcaption {
 		text-align: center;
-		margin: -10px auto 40px;
+		margin: 0 auto 40px;
 		font-size: 15px;
 		color: #8c8c8c;
 		white-space: nowrap;
