--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 <div class="widget text">
-	<h4 class="title">Welcome</h4>
+	<h1 class="title" style="    font-size: 1.5em;">Hackers And Slackers</h4>
 	<div class="content">
 		<p>We're a collective of unprofessional professionals who like to build things. We use programming to enhance the small moments we call life, as well as expedite the inevitable robot enslavement of humanity.</p>
 	 </div>
