--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -15,6 +15,7 @@
 				<p>{{content}}</p>
 				<div class="dropdown">hackersandslackers.com <i class="far fa-angle-down"></i></div>
 				<div style="clear:both"></div>
+				{{> repos}}
 			</div>
 
 			{{> kanban}}
