--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -256,6 +256,13 @@
 			display: none;
 		}
 
+		p {
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-line-clamp: 4;
+			-webkit-box-orient: vertical;
+		}
+
 		p, a {
 			display: inline !important;
 		}
