--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -4,7 +4,7 @@
 
 function populateRepos(repos) {
     console.log('repos = ' + repos);
-    for (var i = 0; i < repos[i].length; i++) {
+    for (var i = 0; i < repos.length; i++) {
       $('.repos').append('<a class="repo" href="' + repos.url + '">' + repos.url + '</a>');
     }
     var api_url = 'https://api.linkpreview.net/';
