--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -1,35 +1,49 @@
-
-<div class="repos"></div>
+<div class="repos">
+</div>
 <script>
+  /*===========================
+   1. function declaretion
+   ==========================*/
+   var repos = [];
 
-function populateRepos(repos) {
-    console.log('repos = ' + repos);
-    for (var i = 0; i < repos.length; i++) {
-      $('.repos').append('<a class="repo" href="' + repos.url + '">' + repos.url + '</a>');
-    }
-    var api_url = 'https://api.linkpreview.net/';
-    $(".repo").each(function(index, element) {
-      console.log('this = ' + this);
-      $.ajax({
-        url: api_url + '?key=' + linkpreview_key + '&q=' + $(this).text(),
-        contentType: "application/json",
-        dataType: 'json',
-        success: function(result) {
-          $(element).append('<a href="' + result.url + '"><div class="repo-preview">' + link_image + '<div class="repo-info"><h4>' + verify_title + '</h4><p>' + result.description + '</p></div></div></a>');
+  var githubRepos = {
+      populateRepos: function() {
+        console.log('repos = ' + repos);
+        for (var i = 0; i < repos.length; i++) {
+          $('.repos').append('<a class="repo" href="' + repos.url + '">' + repos.url + '</a>');
         }
+      },
+      createCards: function() {
+        var api_url = 'https://api.linkpreview.net/';
+        $(".repo").each(function(index, element) {
+          console.log('this = ' + this);
+          $.ajax({
+            url: api_url + '?key=' + linkpreview_key + '&q=' + $(this).text(),
+            contentType: "application/json",
+            dataType: 'json',
+            success: function(result) {
+              $(element).append('<a href="' + result.repo + '">' + result.repo + '</a>');
+            }
+          });
+        });
+    },
+    getRepoDocs: function() {
+      const repoClient = stitch.Stitch.initializeDefaultAppClient('githubrepos-bhnhv');
+      const repoDB = repoClient.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('github');
+
+      repoClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
+        repoDB.collection('repos').find({}).asArray()
+      ).then(docs => {
+        console.log("Found docs", docs)
+        repoArray = docs;
+      }).catch(err => {
+        console.error(err)
       });
-    });
+    },
+    init: function() {
+  		githubRepos.getRepoDocs();
+      githubRepos.populateRepos();
+      githubRepos.createCards():
+  	}
   }
-
-  const repoClient = stitch.Stitch.initializeDefaultAppClient('githubrepos-bhnhv');
-  const repoDB = repoClient.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('github');
-
-  repoClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-    repoDB.collection('repos').find({}).asArray()
-  ).then(docs => {
-      console.log("Found docs", docs)
-      populateRepos(docs)
-  }).catch(err => {
-    console.error(err)
-  });
 </script>
