--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -43,7 +43,7 @@
     init: function() {
   		githubRepos.getRepoDocs();
       githubRepos.populateRepos();
-      githubRepos.createCards():
+      githubRepos.createCards();
   	}
   }
 </script>
