--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -30,7 +30,6 @@
     getRepoDocs: function() {
       const repoClient = stitch.Stitch.initializeDefaultAppClient('githubrepos-bhnhv');
       const repoDB = repoClient.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('github');
-
       repoClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
         repoDB.collection('repos').find({}).asArray()
       ).then(docs => {
@@ -46,4 +45,13 @@
       githubRepos.createCards();
   	}
   }
+
+  /*===========================
+  2. Initialization
+  ==========================*/
+  $(document).ready(function(){
+    themeApp.init();
+  });
+
+
 </script>
