--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -50,7 +50,7 @@
   2. Initialization
   ==========================*/
   $(document).ready(function(){
-    themeApp.init();
+    githubRepos.init();
   });
 
 
