--- a/default.hbs
+++ b/default.hbs
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/MyFontsWebfontsKit.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
-	<!-- perhaps use this <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
-
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
+
 	{{! Scripts }}
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
