--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -364,4 +364,30 @@
       }
     }
   }
+
+  .repos {
+    display: flex;
+    justify-content: space-between;
+
+    .link-preview {
+      .repo-image{
+        height: 100px;
+        width: 100px;
+      }
+
+      .info {
+        padding:15px;
+
+        h4 {
+          font-size: 1.2em;
+          display: block;
+        }
+        p {
+          display: block;
+        }
+      }
+    }
+  }
+
+
 }
