--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -24,9 +24,12 @@
             contentType: "application/json",
             dataType: 'json',
             success: function(result) {
-              $(element).append('<a href="' + result.repo + '">' + result.repo + '</a>');
-              $(element).append('<a href="' + result.url + '"><div class="link-preview"><div class="repo-image" style="background:url(' + result.image + ')"></div><div class="info>"<h4>' + result.title + '</h4><p>' + result.description + '</div></div></a>');
-
+              $(element).append('<a href="' + result.repo + '"> \n' +
+                '<div class="link-preview"> \n' +
+                '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
+                  '<div class="info"><h4>' + result.title + '</h4> \n' +
+                  '<p>' + result.description + '</p> \n' +
+              '</div></div></a>');
             }
           });
         });
