--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -27,7 +27,8 @@
               $(element).append('<a href="' + result.repo + '"> \n' +
                 '<div class="link-preview"> \n' +
                 '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
-                  '<div class="info"><h4>' + result.title + '</h4> \n' +
+                  '<div class="info"> \n' +
+                  '<h4>' + result.title + '</h4> \n' +
                   '<p>' + result.description + '</p> \n' +
               '</div></div></a>');
             }
