--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -372,18 +372,21 @@
     .link-preview {
       .repo-image{
         height: 100px;
-        width: 100px;
+        min-width: 100px;
       }
 
       .info {
         padding:15px;
 
         h4 {
-          font-size: 1.2em;
+          font-size: 1.1em;
           display: block;
+          margin: 0 0 5px 0;
+          line-height: 1.3;
         }
         p {
           display: block;
+          line-height: 1.3;
         }
       }
     }
