--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -10,30 +10,24 @@
 
       repoClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
         repoDB.collection('repos').find({}).asArray()
-      ).then(docs => {
-        console.log("Found docs", docs)
-        for (var i = 0; i < docs.length; i++) {
-          $('.repos').append('<a class="repo" href="' + docs[i].repo + '">' + docs[i].repo + '</a>');
-        }
-      }).then(() => {
+      }).then(docs => {
         var api_url = 'https://api.linkpreview.net/';
-        $(".repo").each(function(index, element) {
-          console.log('this = ' + this);
-          $.ajax({
-            url: api_url + '?key=' + linkpreview_key + '&q=' + $(this).text(),
-            contentType: "application/json",
-            dataType: 'json',
-            success: function(result) {
-              $(element).append('<a href="' + result.repo + '"> \n' +
-                '<div class="link-preview"> \n' +
-                '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
-                  '<div class="info"> \n' +
-                  '<h4>' + result.title + '</h4> \n' +
-                  '<p>' + result.description + '</p> \n' +
-              '</div></div></a>');
-            }
+        for (var i = 0; i < docs.length; i++) {
+            $.ajax({
+              url: api_url + '?key=' + linkpreview_key + '&q=' + docs[i].repo,
+              contentType: "application/json",
+              dataType: 'json',
+              success: function(result) {
+                $(element).append('<a href="' + result.repo + '"> \n' +
+                  '<div class="link-preview"> \n' +
+                  '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
+                    '<div class="info"> \n' +
+                    '<h4>' + result.title.split('/')[1] + '</h4> \n' +
+                    '<p>' + result.description.split(' - ')[1] + '</p> \n' +
+                '</div></div></a>');
+              }
+            });
           });
-        });
       }).catch(err => {
         console.error(err)
       });
