--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -370,6 +370,8 @@
     justify-content: space-between;
 
     .link-preview {
+      width:21%;
+
       .repo-image{
         height: 100px;
         min-width: 100px;
@@ -387,6 +389,7 @@
         p {
           display: block;
           line-height: 1.3;
+          color: black;
         }
       }
     }
