--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -18,7 +18,7 @@
               contentType: "application/json",
               dataType: 'json',
               success: function(result) {
-                $(element).append('<a href="' + result.repo + '"> \n' +
+                $('.repos').append('<a href="' + result.repo + '"> \n' +
                   '<div class="link-preview"> \n' +
                   '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
                     '<div class="info"> \n' +
