--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -18,9 +18,10 @@
               contentType: "application/json",
               dataType: 'json',
               success: function(result) {
+                var cat = $.ajax({url: 'https://api.apify.com/v1/p9hj4TFpjvujADTJ3/crawlers/CgvwZne5R4Wpo2bpo/lastExec/results?token=xZqY6AxGF4AjHpvhC4rZK8AB3', contentType: "application/json", dataType: 'json'});
                 $('.repos').append('<a href="' + result.repo + '"> \n' +
                   '<div class="link-preview"> \n' +
-                  '<div class="repo-image" style="background:url(' + result.image + ')"></div> \n' +
+                  '<div class="repo-image" style="background:url(https://octodex.github.com' + cat.pageFunctionResult + ')"></div> \n' +
                     '<div class="info"> \n' +
                     '<h4>' + result.title.split('/')[1] + '</h4> \n' +
                     '<p>' + result.description.split(' - ')[1] + '</p> \n' +
