--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -9,9 +9,9 @@
   .swiper-pagination {
     position: absolute;
     text-align: center;
-    -webkit-transition: .3s opacity;
-    -o-transition: .3s opacity;
-    transition: .3s opacity;
+    -webkit-transition: 0.3s opacity;
+    -o-transition: 0.3s opacity;
+    transition: 0.3s opacity;
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
     z-index: 10;
@@ -21,24 +21,21 @@
     bottom: 20px!important;
     left: 0!important;
     right: 0!important;
-    display:none;
-
+    display: none;
     @media(max-width: 1000px) {
       display: flex;
     }
 
     .swiper-pagination-bullet {
-        width: 10px;
-        height: 10px;
-      }
+      width: 10px;
+      height: 10px;
+    }
   }
-
 
   .container {
     max-width: 1200px;
-
     @media(max-width: 1000px) {
-      width:100%;
+      width: 100%;
       max-width: auto;
     }
   }
@@ -150,7 +147,6 @@
       margin-bottom: 7px;
       height: 900px;
       min-width: 24%;
-
       @media(max-width: 1000px) {
         min-width: auto;
       }
@@ -164,7 +160,6 @@
         /*max-width: 90%;*/
       }
 
-
       h2 {
         margin-top: 0;
         font-size: 1.8em;
@@ -173,8 +168,6 @@
         padding-bottom: 10px;
         position: relative;
         width: 89%;
-
-
 
         &::after {
           content: "";
@@ -242,12 +235,11 @@
             line-height: 54px;
             transform: rotate(45deg);
 
-
             img {
               width: 15px;
               height: 15px;
               transform: rotate(-45deg);
-                  margin-top: 22px;
+              margin-top: 22px;
             }
 
             &.Subtask,
@@ -369,31 +361,33 @@
     display: flex;
     justify-content: space-between;
 
-    .link-preview {
-      width:21%;
+    a {
+      max-width: 24%;
 
-      .repo-image{
-        height: 100px;
-        min-width: 100px;
-      }
-
-      .info {
-        padding:15px;
-
-        h4 {
-          font-size: 1.1em;
-          display: block;
-          margin: 0 0 5px 0;
-          line-height: 1.3;
+      .link-preview {
+        .repo-image {
+          height: 100px;
+          min-width: 100px;
         }
-        p {
-          display: block;
-          line-height: 1.3;
-          color: black;
+
+        .info {
+          padding: 15px;
+
+          h4 {
+            font-size: 1em;
+            display: block;
+            margin: 0 0 5px;
+            line-height: 1.3;
+          }
+
+          p {
+            display: block;
+            line-height: 1.3;
+            color: black;
+            font-size: 0.8em;
+          }
         }
       }
     }
   }
-
-
 }
