--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -17,7 +17,8 @@
             var cat = $.ajax({url: 'https://api.apify.com/v1/p9hj4TFpjvujADTJ3/crawlers/CgvwZne5R4Wpo2bpo/lastExec/results?token=xZqY6AxGF4AjHpvhC4rZK8AB3',
               contentType: "application/json",
               dataType: 'json',
-              success: function(result){return JSON.parse(result['pageFunctionResult'])
+              success: function(result){
+                return JSON.parse(result)['pageFunctionResult']
               }
             });
 
