--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -18,7 +18,7 @@
               contentType: "application/json",
               dataType: 'json',
               success: function(result){
-                return JSON.parse(result)['pageFunctionResult']
+                return JSON.parse(result).pageFunctionResult
               }
             });
 
