--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -379,6 +379,12 @@
             margin: 0 0 5px;
             line-height: 1.3;
           }
+          i {
+            margin-right: 10px;
+            color: #6f929e;
+            font-size: 54px;
+            margin: 20px 0 0 20px;
+          }
 
           p {
             display: block;
