--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -365,6 +365,7 @@
       max-width: 24%;
 
       .link-preview {
+        min-height: 91px;
         i {
           margin-right: 10px;
           color: #6f929e;
